file launching now works on OSX